--- a/conf/secure.conf
+++ b/conf/secure.conf
@@ -22,7 +22,7 @@ play {
     }
 
     hosts {
-      allowed = ["localhost:9000", "localhost:3000"]
+      allowed = ["localhost:9000", "localhost:9009", "localhost:3000"]
     }
 
     hsts {
